<resources>
    <string name="app_name">MoviesList</string>
     <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_settings">Settings</string>
    <string name="action_watch_trailer">Watch Trailer</string>
    <string name="action_watched_film">Set Film Watched</string>
    <string name="action_remove_film">Remove Film</string>
    <!--<string name="action_map">Map Location</string>-->
    <string name="action_share">Share</string>
    <string name="action_add_film">Add</string>
    <string name="action_search_film">Search</string>

    <string name="video_description">Description:</string>
    <string name="video_title">Title:</string>

    <string name="title_search_dialog">Insert the title of the film:</string>

    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_plot_label">Plot</string>
    <string name="pref_plot_key" translatable="false">plot</string>
    <string name="pref_plot_short" translatable="false">short</string>
    <string name="pref_plot_full" translatable="false">full</string>
    <string name="pref_plot_label_short">Short</string>
    <string name="pref_plot_label_full">Full</string>

    <string name="pref_orber_by_label">Order Film by</string>
    <string name="pref_order_by_key" translatable="false">order</string>
    <string name="pref_order_by_rating" translatable="false">rating</string>
    <string name="pref_order_by_metascore" translatable="false">metascore</string>
    <string name="pref_order_by_votes" translatable="false">votes</string>
    <string name="pref_order_by_label_rating">imdbRating</string>
    <string name="pref_order_by_label_metascore">Metascore</string>
    <string name="pref_order_by_label_votes">imdbVotes</string>
    <string name="title_activity_youtube">Youtube</string>

    <string name="hello_world">Hello world!</string>
</resources>
